fix https://github.com/umjammer/vavi-apps-editablepanel/security/code-scanning/1